# public/docs/openapi.yaml
@@ -1,48 +1,12 @@
 openapi: 3.0.3
 info:
-  title: Laravel
+  title: 'Images API REST Documentation'
   description: ''
   version: 1.0.0
 servers:
   -
     url: 'http://images-repo.test'
 paths:
-  /api/user:
-    get:
-      summary: ''
-      operationId: getApiUser
-      description: ''
-      parameters:
-        -
-          in: header
-          name: Content-Type
-          description: ''
-          example: application/json
-          schema:
-            type: string
-        -
-          in: header
-          name: Accept
-          description: ''
-          example: application/json
-          schema:
-            type: string
-      responses:
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
-      tags:
-        - Endpoints
-      security: []
   /api/auth/login:
     post:
       summary: 'POST - Login User'
@@ -129,6 +93,13 @@ paths:
       parameters:
         -
           in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
           name: Content-Type
           description: ''
           example: application/json
@@ -192,7 +163,70 @@ paths:
                     example: Unauthenticated.
       tags:
         - Endpoints
+  /api/uploadImage:
+    post:
+      summary: 'POST - Upload Image'
+      operationId: pOSTUploadImage
+      description: 'In order to use this api you must get a valid username and password provided by our team.'
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: multipart/form-data
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  type: string
+                  format: binary
+                  description: 'Your file.'
+                folder:
+                  type: string
+                  description: 'Your folders name.'
+                  example: productos
+              required:
+                - image
+                - folder
+      security: []
 tags:
   -
     name: Endpoints
     description: ''
+components:
+  securitySchemes:
+    default:
+      type: http
+      scheme: bearer
+      description: ''
+security:
+  -
+    default: []
